# mcp-gateway

./: .env.example  .gitignore  Makefile  README.md  chatbot.py  litellm_config.yaml  main.py  pyproject.toml  script.sh
.chainlit/: config.toml
tests/: test_bdd_api.py  test_bdd_client.py  test_bdd_litellm_config.py  test_bdd_metadata.py  test_bdd_models.py  test_bdd_sql_service.py
tests/features/: api.feature  client.feature  litellm_config.feature  metadata_search.feature  models.feature  sql_operations.feature  sql_service.feature
