[project]
name = "mcp-gateway"
version = "0.1.0"
description = "A generic MCP gateway exposing any HTTP-based SQL portal as MCP tools and REST endpoints."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.11.1",
    "fastapi>=0.139.2",
    "fastmcp>=3.4.4",
    "litellm>=1.92.0",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.22",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=8.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
